kubernates/ingress/exam/ingress-exam.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /hnginx # /h에서 /hnginx로 수정
            pathType: Prefix
            backend:
              service:
                name: h-svc
                port:
                  number: 80
          - path: /ipnginx # /ip에서 /ipnginx로 수정
            pathType: Prefix
            backend:
              service:
                name: ip-svc
                port:
                  number: 80
